--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -33,8 +33,8 @@ jobs:
       # Runs a set of commands using the runners shell 
       - name: config
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config --global user.email "optickal@proton.me"
+          git config --global user.name "Optickal [bot]"
       - name: Main
         run: |
           pwd
