--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -46,5 +46,5 @@ jobs:
           ls -la
       - name: commit & push
         run: |
-          git commit -m "links are updated"
+          git commit -m "[bot] links are updated"
           git push
